--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf": "^3.0.0",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
