--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
     "html2canvas-pro": "^1.5.8",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.476.0",
     "next": "15.2.0",
